# PoroScope

./: .gitignore  .hermes-plan.md  CHANGELOG.md  CITATION.cff  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: docs.yml  publish.yml  tests.yml
api/grains/: index.html
api/measurements/: index.html
api/particles/: index.html
api/segmentation/: index.html
docs/: changelog.md  contributing.md  index.md
docs/api/: grains.md  measurements.md  overview.md  particles.md  phases.md  pipeline.md  segmentation.md
docs/examples/: grain-size.md  phase-analysis.md  sem-porosity.md
docs/guide/: grains.md  installation.md  napari.md  particles.md  phases.md  porosity.md
examples/: README.md  generate_synthetic_example.py
examples/data/: synthetic_microstructure.tif
guide/grains/: index.html
guide/installation/: index.html
guide/particles/: index.html
search/: search_index.json
site/: 404.html  objects.inv
site/changelog/: index.html
site/contributing/: index.html
site/search/: search_index.json
src/poroscope/: __init__.py  batch.py  cli.py  config.py  export.py  grains.py  io.py  measurements.py  napari.yaml  napari_plugin.py  particles.py  phases.py  pipeline.py  preprocessing.py  report.py  segmentation.py  visualization.py
tests/: test_batch.py  test_cli.py  test_config.py  test_grains.py  test_io.py  test_measurements.py  test_particles.py  test_phases.py  test_pipeline.py  test_preprocessing.py  test_preprocessing_advanced.py  test_segmentation.py  test_segmentation_advanced.py
(+13 files in other folders)
