[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "poroscope"
version = "0.1.0"
description = "Calibrated porosity analysis for microscopy and SEM microstructure images."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "BSD-3-Clause" }
authors = [
  { name = "Utku Sahin" }
]
keywords = ["materials-science", "image-analysis", "porosity", "microscopy", "sem"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Image Processing",
]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "scikit-image>=0.21",
  "tifffile>=2023.7.10",
  "pandas>=2.0",
  "matplotlib>=3.7",
  "typer>=0.9",
]

[project.optional-dependencies]
test = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
]

[project.scripts]
poroscope = "poroscope.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

